--- a/6-guia/ejercicios-6-extra/ej-extra-1-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-1-6.tex
@@ -1,15 +1,26 @@
 \begin{enunciado}{\ejExtra}
-Para $w \en G_6$, calcular 
-        $S = w^{71} + w^{-14} + 5\conj w^4 + w^{39} - 4w^{-22} + w^{2023}$
+  Para $w \en G_6$, calcular
+  $S = w^{71} + w^{-14} + 5\conj w^4 + w^{39} - 4w^{-22} + w^{2023}$
 \end{enunciado}
 
 \textit{Si $w = 1$: }\par
-$S = 5$\par
+$$
+  S = 1 + 1+ 5 \cdot 1 + 1 - 4 \cdot 1 + 1 = 5
+$$
 
-\textit{Si $w = -1$: }\par
-$S = -1 + 1 + 5 - 1 -4 -1 = -1$\par
+\textit{Si $w \distinto 1$: }\par
+$$
+  \begin{array}{rcl}
+    S & =               & w^{71} + w^{-14} + 5\conj w^4 + w^{39} - 4w^{-22} + w^{2023}                                         \\
+      & \igual{\red{!}} & w^5 + w^4 + 5 w^2 + w^3 - 4w^2 + w^1                                                                 \\
+      & \igual{\red{!}} & w^1 + w^2 + w^3 + w^4 + w^5 = \magenta{-1} + \ub{\magenta{1} + w^1 + w^2 + w^3 + w^4 + w^5}{=0} = -1
+  \end{array}
+$$
 
-\textit{Si $w \distinto \pm 1$: }\par
-$S = w^{71} + w^{-14} + 5\conj w^4 + w^{39} - 4w^{-22} + w^{2023} =
-	w^5 + w^4 + 5 w^2 + w^3 - 4w^2 + w^1 =\\
-	w^1 + w^2 + w^3 + w^4 + w^5 = \magenta{-1} + \ub{\magenta{1} + w^1 + w^2 + w^3 + w^4 + w^5}{=0} = -1$
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
+\end{aportes}
