--- a/1-guia/ejercicios-1/ej-11-1.tex
+++ b/1-guia/ejercicios-1/ej-11-1.tex
@@ -22,3 +22,10 @@
   \item $\paratodo x \en \reales,\, x^2 > 4 \entonces x > 2$.\par
         La  proposición es falsa, dado que si $x = -3$, queda $9 > 4 \entonces -3 > 2$, lo cual es falso.
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
+
