--- a/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
@@ -49,7 +49,7 @@ sí mismos y por 1. Para tener una mejor explicación
 
 
 \textit{factorizaciones: }\par
-\boxed{
+$$
   \begin{array}{rcl}
     \racionales[X] & \to & f =  (\ob{X^2 - 5}{\en\racionales[X]}) \cdot
     (\ob{X^2 - X + 1}{\en\racionales[X]}) \cdot
@@ -62,12 +62,15 @@ sí mismos y por 1. Para tener una mejor explicación
     (\ob{X+3}{\en\complejos[X]}) \cdot
     (\ob{X - \sqrt5}{\en \complejos[X]}) \cdot
     (\ob{X + \sqrt5}{\en \complejos[X]}) \cdot
-    (\ob{X - (\frac{1}{2}  - \frac{\sqrt{3}}{2})}{\en \complejos[X]}) \cdot
-    (\ob{X - (\frac{1}{2}  + \frac{\sqrt{3}}{2})}{\en\complejos[X]})
+    (\ob{X - (\frac{1}{2}  - \frac{\sqrt{3}}{2} i)}{\en \complejos[X]}) \cdot
+    (\ob{X - (\frac{1}{2}  + \frac{\sqrt{3}}{2} i)}{\en\complejos[X]})
   \end{array}
-  }
-\Tilde
+  $$
 
-
-
-
+% Contribuciones
+\begin{aportes}
+	%% iconos : \github, \instagram, \tiktok, \linkedin
+	%\aporte{url}{nombre icono}
+	\item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+	\item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
+\end{aportes}
