--- a/7-guia/ejercicios-7-extra/ej-extra-3-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-3-7.tex
@@ -1,63 +1,81 @@
 \begin{enunciado}{\ejExtra}
-Hallar \textbf{todos} los polinomios \textbf{mónicos} $f \en \racionales[X]$
-de grado mínimo que cumplan simultáneamente las siguientes condiciones:
-\begin{enumerate}[label=\roman*)]
-	\item $1 - \sqrt{2}$ es raíz de $f$;
-	\item $X(X-2)^2 \divideA (f:f')$;
-	\item $(f:X^3 - 1) \distinto 1$;
-	\item $f(-1) = 27$;
-\end{enumerate}
+  Hallar \textbf{todos} los polinomios \textbf{mónicos} $f \en \racionales[X]$
+  de grado mínimo que cumplan simultáneamente las siguientes condiciones:
+  \begin{enumerate}[label=\roman*)]
+    \item $1 - \sqrt{2}$ es raíz de $f$;
+    \item $X(X-2)^2 \divideA (f:f')$;
+    \item $(f:X^3 - 1) \distinto 1$;
+    \item $f(-1) = 27$;
+  \end{enumerate}
 
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-	\item Como $f \en \racionales[X]$ si $\alpha_1 = 1 - \sqrt{2}$ es raíz entonces  $\alpha_2 = 1 + \sqrt{2}$
-	      para que no haya coeficientes irracionales en el polinomio.\\
-	      $$
-		      (X - (1 - \sqrt{2}))
-		      \cdot
-		      (X - (1 + \sqrt{2}))
-		      =
-		      X^2 - 2X - 1
-	      $$
-	      Por lo tanto $X^2 - 2X - 1$ será un factor de $f \en \racionales[X]$.
+  \item Como $f \en \racionales[X]$ si $\alpha_1 = 1 - \sqrt{2}$ es raíz entonces  $\alpha_2 = 1 + \sqrt{2}$
+        para que no haya coeficientes irracionales en el polinomio.\\
+        $$
+          (X - (1 - \sqrt{2}))
+          \cdot
+          (X - (1 + \sqrt{2}))
+          =
+          X^2 - 2X - 1
+        $$
+        Por lo tanto $X^2 - 2X - 1$ será un factor de $f \en \racionales[X]$.
 
-	\item Si
-	      $X(X-2)^2 \divideA (f:f')
-		      \entonces
-		      \llave{l}{
-			      \alpha_3 = 0
-			      \text{ raíz simple de $f'$}
-			      \entonces
-			      \text{ raíz doble de $f$}\\
-			      \alpha_4 = 2
-			      \text{ raíz simple de $f'$}
-			      \entonces
-			      \text{ raíz doble de $f$}
-		      }
-	      $
-	      Por lo tanto $X^2(X-2)^3$ serán factores de $f$.
+  \item Si
+        $X(X-2)^2 \divideA (f:f')
+          \entonces
+          \llave{l}{
+            \alpha_3 = 0
+            \text{ raíz simple de $f'$}
+            \entonces
+            \text{ raíz doble de $f$} \\
+            \alpha_4 = 2
+            \text{ raíz simple de $f'$}
+            \entonces
+            \text{ raíz doble de $f$}
+          }
+        $
+        Por lo tanto $X^2(X-2)^3$ serán factores de $f$.
 
-	\item Si $(f:X^3 - 1) \distinto 1$ quiere decir que por lo menos alguna de las 3 raíces de:\\
-	      $
-		      X^3 - 1 =
-		      (X-1)\cdot (X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}))\cdot (X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}))$
-	      tiene que aparecer en la factorización de $f$. Pero
-	      parecido al item i) si tengo una raíz compleja, también necesito el conjugado complejo, para que no me queden
-	      coeficientes de $f$ en complejos,\\
-	      $ X^3 - 1 = (X-1) \cdot (X^2 + X +1)$, me quedaría con el \textit{factor de menor grado} si eso no \textit{rompe} otras condiciones.\\
+  \item Si $(f:X^3 - 1) \distinto 1$ quiere decir que por lo menos alguna de las 3 raíces de:\\
+        $
+          X^3 - 1 =
+          (X-1)\cdot (X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}))\cdot (X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}))$
+        tiene que aparecer en la factorización de $f$. Pero
+        parecido al item i) si tengo una raíz compleja, también necesito el conjugado complejo, para que no me queden
+        coeficientes de $f$ en complejos,\\
+        $ X^3 - 1 = (X-1) \cdot (X^2 + X +1)$, me quedaría con el \textit{factor de menor grado} si eso no \textit{rompe} otras condiciones.\\
 
-	      Por lo tanto $(X-1)$ o $(X^2 + X +1)$ aparecerá en la factorización de $f$.
+        Por lo tanto $(X-1)$ o $(X^2 + X +1)$ aparecerá en la factorización de $f$.
 
-	\item $f(-1) = 27$. Hasta el momento:\\
-	      $$
-		      \llave{l}{
-			      \magenta{f_1} = (X^2 - 2X - 1)\cdot (X-2)^3 \cdot X^2 \cdot (X^2 + X + 1) \to \magenta{f_1}(-1) = 2 \cdot (-27) \cdot 1 \cdot 1 = -54  \\
-			      \blue{f_2} = (X^2 - 2X - 1)\cdot (X-2)^3 \cdot X^2 \cdot (X-1) \to \blue{f_2}(-1) =  2 \cdot (-27) \cdot 1 \cdot (-2) = 108
-		      }
-	      $$,
-	      ninguno cumple la condición iv).
+  \item $f(-1) = 27$. Hasta el momento:\\
+        $$
+          \llave{l}{
+            \magenta{f_1} = (X^2 - 2X - 1)\cdot (X-2)^3 \cdot X^2 \cdot (X^2 + X + 1) \to \magenta{f_1}(-1) = 2 \cdot (-27) \cdot 1 \cdot 1 = -54 \\
+            \blue{f_2} = (X^2 - 2X - 1)\cdot (X-2)^3 \cdot X^2 \cdot (X-1) \to \blue{f_2}(-1) =  2 \cdot (-27) \cdot 1 \cdot (-2) = 108
+          },
+        $$
+        ninguno cumple la condición iv).
 \end{enumerate}
-Para encontrar \textit{un} polinomio que cumpla lo pedido tomaría el $\blue{f_2}$ que tiene \red{menor grado} de los dos y lo multiplicaría por
-$\yellow{(X - \frac{3}{4})}$ de manera que $f = (X^2 - 2X - 1)\cdot X^2 \cdot (X-2)^3 \cdot (X-1) \cdot \yellow{(X-\frac{3}{4})} \to \boxed{f(-1) = 27}$
+Para encontrar \textit{un} polinomio que cumpla lo pedido tomaría el $\blue{f_2}$ que tiene \red{menor grado} de los dos y lo multiplicaría por:
+$$
+  f = \blue{f_2} \cdot \yellow{(X - a)} \quad \text{con} \quad a \en \racionales
+$$
+
+de manera que:
+$$
+  f(-1) = \blue{f_2}(-1) \cdot \yellow{(X - a)}  = 108 \cdot (-1 - a) = 27 \sii a = -\frac{5}{4}
+$$
+$$
+  f =  (X^2 - 2X - 1)\cdot (X-2)^3 \cdot X^2 \cdot (X-1) \cdot (X + \frac{5}{4})
+$$
 así cumpliendo todas las condiciones.
+
+% Contribuciones
+\begin{aportes}
+	%% iconos : \github, \instagram, \tiktok, \linkedin
+	%\aporte{url}{nombre icono}
+	\item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+	\item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
+\end{aportes}
