add ej parcial 2024 guia 1 y 2

--- a/2-guia/teoria-2/teoria-2.tex
+++ b/2-guia/teoria-2/teoria-2.tex
@@ -29,7 +29,7 @@
           1 + \frac{n \cdot (n+1)}{2} \Tilde
         $$
 
-  \item\label{2-teoria:geometrica} \textit{Suma geométrica: }
+  \item\hypertarget{2-teoria:geometrica}{\textit{Suma geométrica:} }
         $$
           \paratodo n \en \naturales:
           \sumatoria{i = 0}{n} q^i =
@@ -39,11 +39,11 @@
             \frac{q^{n+1}-1}{q-1} & \text{si} & q \distinto 1
           }
         $$
-        Y cuando empieza desde $i = 0$ u otro valor se hace:
+                Y cuando empieza desde $\blue{i = 1}$ u otro valor se hace:
         $$
-          \sumatoria{i = 1}{n} q^i
+                \sumatoria{\blue{i = 1}}{n} q^i
           \igual{\red{!}}
-          \red{-1 + 1} + \sumatoria{i = 1}{n} q^i
+                \red{-1 + 1} + \sumatoria{\blue{i = 1}}{n} q^i
           \igual{\red{!}}
           \red{-1} + \sumatoria{i = \red{0}}{n} q^i =
           \llave{lll}{
