--- a/5-guia/ejercicios-5-extra/ej-extra-1-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-1-5.tex
@@ -1,102 +1,112 @@
-\ejExtra
-Hallar los posibles restos de dividir a $a$ por 70, sabiendo que
-$(a^{1081}+ 3a + 17 : 105) = 35$\\
+\begin{enunciado}{\ejExtra}
+  Hallar los posibles restos de dividir a $a$ por 70, sabiendo que
+  $(a^{1081}+ 3a + 17 : 105) = 35$
+\end{enunciado}
+Como $105 = 3\cdot5\cdot7$ quiero que ocurra:
+$$
+  \llave{l}{
+    \congruencia{a^{1081}+ 3a + 17}{0}{5} \\
+    \congruencia{a^{1081}+ 3a + 17}{0}{7} \\
+    \noCongruencia{a^{1081}+ 3a + 17}{0}{3}
+  }
+  \Sii{\red{!}}
+  \llave{l}{
+    \congruencia{a^{1081}+ 3a + 2}{0}{5} \llamada1 \\
+    \congruencia{a^{1081}+ 3a + 3}{0}{7} \llamada2 \\
+    \noCongruencia{a^{1081} + 2}{0}{3} \llamada3.
+  }
+$$
+De esa forma me aseguro que el MCD sea 35. Ahora empiezo a estudiar $\llamada1$:
 
-\separadorCorto
-
-$ (\ub{a^{1081}+ 3a + 17}{m} : \ub{105}{3\cdot 5 \cdot 7})  = \ub{35}{5 \cdot 7}
-  \flecha{debe ocurrir}[que]
-  \llave{c}{
-    5 \divideA m \\
-    \text{y}     \\
-    7 \divideA m \\
-    \text{y}     \\
-    3 \noDivide m
-  }\\
-  5 \divideA m
-  \to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{5} 2}}{0}{5}
-  \to
+$$
+  \congruencia{a^{1081}+ 3a + 2}{0}{5}
+  \sii
   \llave{cl}{
-    \text{si} & 5 \divideA a \to \congruencia{2}{0}{5}
-    \entonces \noCongruencia{a}{0}{5}                  \\
-    \text{o}                                           \\
-    \text{si} & 5 \noDivide a
-    \flecha{$a^{1081} = a (a^4)^{270}$}[5 primo y $5 \noDivide a$]
+    \flecha{caso si}[$\congruencia{a}{0}{5}$]          & \congruencia{2}{0}{5}
+    \flecha{concluyo que}
+    \noCongruencia{a}{0}{5}                                                    \\
+                                                       & \text{o}              \\
+    \flecha{PTF. $p$ primo}[y $\noCongruencia{a}{0}{5}$] &
     \congruencia{a + 3a + 2}{0}{5}
-    \entonces
-    \boxed{\congruencia{a}{2}{5}}                     \\
-  }
-  \\
-  7 \divideA m
-  \to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{7} 3}}{0}{7}
-  \to
-  \llave{cl}{
-    \text{si} & 7 \divideA a \to \congruencia{3}{0}{7} \entonces \noCongruencia{a}{0}{7} \\
-    \text{o}                                                                             \\
-    \text{si} & 7 \noDivide a
-    \flecha{$a^{1081} = a (a^6)^{180}$}[7 primo y $7 \noDivide a$]
-    \congruencia{a + 3a + 3}{0}{7} \to \congruencia{4a}{-3}{7}
-    \entonces
-    \boxed{\congruencia{a}{1}{7}}                                                       \\
-  }
-  \\
-  3 \noDivide m
-  \to \noCongruencia{a^{1081} + \ub{3}{=0}a + \ub{17}{\conga{3} 2}}{0}{3}
-  \to
-  \llave{ll}{
-    \text{si} & 3 \divideA a
-    \to
-    \noCongruencia{2}{0}{3} \entonces \congruencia{a}{0}{3} \\
-    \text{o}                                                \\
-    \text{si} & 3 \noDivide a
-    \flecha{$a^{1081} = a (a^2)^{540}$}[3 primo y $3 \noDivide a$]
-    \noCongruencia{a + 2}{0}{3}
-    \entonces
-    \llave{l}{
-      \noCongruencia{a}{1}{3} \\
-      \noCongruencia{a}{0}{3} \\
-    }
-    \entonces
-    \boxed{\congruencia{a}{2}{3}}                          \\
-  }
-$\\
+    \sii
+    \congruencia{a}{2}{5}}                     \\
+$$
+\textit{Hasta el momento} tengo que para que se cumpla lo pedido:
+$$
+  \congruencia{a}{2}{5} \llamada4
+$$
 
-Las condiciones marcan 2 sistemas:\\
-\begin{minipage}{0.5\textwidth}
-  \centering
-  $
-    \llave{l}{
-      \congruencia{a}{2}{5} \\
-      \congruencia{a}{1}{7} \\
-      \congruencia{a}{0}{3}
-    }
-    \to \boxed{\congruencia{a}{57}{105} }
-  $
-\end{minipage}
-\begin{minipage}{0.5\textwidth}
-  \centering
-  $\llave{l}{
-      \congruencia{a}{2}{5} \\
-      \congruencia{a}{1}{7} \\
-      \congruencia{a}{2}{3}
-    }
-    \to \boxed{\congruencia{a}{92}{105} }
-  $
-\end{minipage}
-Veo que para el conjunto de posibles $a$
+Busco más condiciones en $\llamada2$:
+$$
+  \congruencia{a^{1081}+ 3a + 1}{0}{7}
+  \sii
+  \llave{cl}{
+    \flecha{caso si}[$\congruencia{a}{0}{7}$]          & \congruencia{1}{0}{7}
+    \flecha{concluyo que}
+    \noCongruencia{a}{0}{7}                                                     \\
+                                                        & \text{o}              \\
+    \flecha{PTF. $p$ primo}[y $\noCongruencia{a}{0}{7}$] &
+    \congruencia{4a + 3}{0}{7}
+    \sii
+    \congruencia{a}{1}{7}}                    . \\
+$$
+Se concluye de este último resultado que $a$ también puede tomar los valores:
+$$
+  \congruencia{a}{1}{7} \llamada5
+$$
+Por último falta estudiar los valores de $a$ en $\llamada3$:
+$$
+  \noCongruencia{a^{1081} + 2}{0}{3}
+  \sii
+  \llave{cl}{
+    \flecha{caso si}[$\congruencia{a}{0}{3}$]          & \noCongruencia{2}{0}{3}
+    \flecha{concluyo que}
+    \congruencia{a}{0}{3} \llamada6                                               \\
+                                                        & \text{o}                \\
+    \flecha{PTF. $p$ primo}[y $\noCongruencia{a}{0}{3}$] &
+    \noCongruencia{a + 2}{0}{3}
+    \sii
+    \noCongruencia{a}{1}{3}
+    \flecha{concluyo que}[\red{!!}] \congruencia{a}{2}{3} \llamada6.
+  }
+$$
+En el \red{!!} estoy en la rama donde $\noCongruencia{a}{0}{3}$ y si $\congruencia{a}{1}{3}$ no se cumpliría $\llamada3$, por eso el único valor que sale
+de esa rama es $\congruencia{a}{2}{3}$.
+
+El resultado del estudio de $\llamada1, \llamada2 \ytext \llamada3$,
+dio los resultados de $\llamada4, \llamada5, \llamada6$ con los cuales se puede formar los sistemas:
+$$
+  \llave{l}{
+    \congruencia{a}{2}{5} \\
+    \congruencia{a}{1}{7} \\
+    \congruencia{a}{0}{3}
+  }
+  \flecha{divisore coprimos}[\href{\chinito}{TCH}] \boxed{\congruencia{a}{57}{105} }
+  \ytext
+  \llave{l}{
+    \congruencia{a}{2}{5} \\
+    \congruencia{a}{1}{7} \\
+    \congruencia{a}{2}{3}
+  }
+  \flecha{divisore coprimos}[\href{\chinito}{TCH}]
+  \boxed{\congruencia{a}{92}{105} }
+$$
+
+El conjunto de posibles $a$:
+
 $$
   \llave{c}{
-    a = 105k_1 + 57 \llamada1 \\
-    \otext                    \\
-    a = 105k_2 + 92 \llamada2
+    a = 105k_1 + 57 \\
+    \otext          \\
+    a = 105k_2 + 92
   }
 $$
-Con los valores de $a$ hallados, calculo el resto 70, $r_{70}(a)$:
+Solo falta calcular el $r_{70}(a)$ para estos valores de $a$. Calcular el resto es ver la congruencia 70, $r_{70}(a)$:
 $$
   \flecha{$\conga{70}$}
   \llave{l}{
-    \llamada1 \congruencia{a}{57}{35} \\
-    \llamada2 \congruencia{a}{22}{35}
+    a = 35 k_1 + 57 \Sii{def}  \congruencia{a}{57}{35} \\
+    a = 35 k_2 + 22 \Sii{def}  \congruencia{a}{22}{35}
   }
 $$
 
@@ -104,8 +114,6 @@ Los restos pedidos:
 $$
   r_{70}(a) = \set{22, 57}
 $$
-
-
 
 % Contribuciones
 \begin{aportes}
