--- a/3-guia/ejercicios-3-extra/ej-extra-4-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-4-3.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejercicio}
+\begin{enunciado}{\ejExtra}
         Hallar la cantidad de números naturales de exactamente 20 dígitos (o sea que no empiezan con 0) que se pueden
         formar con los dígitos 0, 2, 3 y 9 y que cumplen que la suma de los 7 últimos dígitos es igual a 6.
 \end{enunciado}
@@ -9,4 +9,4 @@ Para sumar 6 con los números que puedo usar, solo tengo 2+2+2 y 3+3:
 En los últimos 7 dígitos tengo $\binom{7}{2} + \binom{7}{3}$ opciones
 
 TODO:
-HACER ESTO AGADABLE
+HACER ESTO AGRADABLE
