--- a/macros/disclaimer.tex
+++ b/macros/disclaimer.tex
@@ -6,31 +6,30 @@ Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \
 \noindent\makebox[\textwidth]{
   \begin{minipage}{0.7\textwidth}
     \centering
-    {\Large \red{¡Si usás este apunte vas a reprobar!}}\par\bigskip
+    {\Large \red{¡Recomendación para sacarle jugo al apunte!}}\par\bigskip
 
-    \textit{Not really.} Dependerá de como lo uses, puede ser un arma de doble filo. Ya sabés como se usa \magenta{esto \faIcon{toilet-paper}}.
-    Depende de vos lo que hagas con él.\par Si estás trabado, antes de ver la solución que hizo otra persona:
+    Estudiar con resueltos puede ser un arma de doble filo.
+    Si estás trabado, antes de saltar a la solución que hizo otra persona:
 
-    \begin{itemize}[label=\purple{\faIcon{toilet-paper}}]
+          \begin{enumerate}[label=\purple{\faIcon{toilet-paper}$_{\arabic*}$}]
 
-            \item Mirar la solución ni bien te trabás, te \textit{condicionas pavlovianamente} a \textbf{no} pensar.
-                    Necesitás darle tiempo al cerebro para llegar a la solución.
+      \item Mirar la solución ni bien te trabás, te \textit{condicionas pavlovianamente} a \textbf{no} pensar.
+            Necesitás darle tiempo al cerebro para llegar a la solución.
 
       \item Intentá un ejercicio similar, pero \textbf{más fácil}.
 
       \item ¿No sale el fácil? Intentá uno \textbf{\large aún más fácil}.
 
-
       \item Fijate si tenés un ejercicio similar hecho en clase. Y mirá ese, así no quemás el ejercicio de la guía.
 
       \item Tomate 2 minutos para formular una pregunta que realmente
             sea lo que \textbf{no} entendés. Decir \textit{`no me sale'} $\noexiste +$. Escribí
-                    esa pregunta, vas a dormir mejor. 
-    \end{itemize}\par \medskip
+            esa pregunta, vas a dormir mejor.
+    \end{enumerate}\par \medskip
 
     Ahora sí mirá la solución.\par \medskip
 
-    \textit{Si no te salen los ejercicios fáciles} de un tema en particular, no te van a salir los ejercicios
+    \textit{Si no te salen los ejercicios fáciles sin ayuda}, no te van a salir los ejercicios
     más difíciles: \cyan{Sentido común}.\par\medskip
 
     ¡Los más fáciles van a salir! Son el alimento de nuestra confiaza.\par\medskip
@@ -40,8 +39,8 @@ Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \
     Hacer un parcial bien lleva entre 3 y 4 horas. Así que si vos en 4 horas "hiciste" 3 o 4 parciales, \textit{algo raro debe haber}.
     A los parciales se va a \textbf{pensar} y eso hay que practicarlo desde el primer día.\par\bigskip
 
-          Mirá los videos de las teóricas \href{\videosTeresa}{de Teresa que son buenísimos \faIcon{youtube}}.\par\medskip
-          Videos de prácticas de pandemia, complemento extra: \href{\videosPracticas}{Prácticas Pandemia \faIcon{youtube}}.\par\bigskip
+    Mirá los videos de las teóricas \href{\videosTeresa}{de Teresa que son buenísimos \faIcon{youtube}}.\par\medskip
+    Videos de prácticas de pandemia, complemento extra: \href{\videosPracticas}{Prácticas Pandemia \faIcon{youtube}}.\par\bigskip
 
     Los ejercicios que se dan en clase suelen ser similares a los parciales,
     a veces más difíciles, repasalos siempre \href{\justDoIt}{Just Do IT \faIcon{jedi}\faIcon{hand-sparkles}\faIcon{jedi}!}
