fix 15 extra guia 4

--- a/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
@@ -42,8 +42,10 @@ $$
   \set{1, 5}
 $$
 
-\textit{División por 5:}
+\textit{División por 1:}\par
+El uno está por ejemplo para el par $(a,b) = (1,2)$ donde $a \cop b$.
 
+\textit{División por 5:}
 $$
   \begin{array}{|c|c|c|c|c|c|}
     \hline
