--- a/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
@@ -34,7 +34,8 @@ $$
   \congruencia{2^4 \cdot 5^3}{0}{p}
 $$
 
-En el cálculo consideré que $p$ no era ni 2 ni 5. Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 29}$:
+De acá saco que no hay $p$ fuera del conjunto que tengo que puedan ser solución.
+En el cálculo consideré que $p$ no era ni 2 ni 5. Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 29}$ en particular:
 
 \begin{enumerate}[label={\tiny \magenta{\faIcon[regular]{gamepad}}}]
   \item
