--- a/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
@@ -16,7 +16,7 @@ $$
   \end{array}
 $$
 
-Viendo esa expresión tengo ciertos $p$ primos de interés que no me dejan aplicar PTF para toda la expresión. Estos serían:
+Viendo esa expresión tengo ciertos $p$ primos de interés:
 $$
   p \en \set{2, 3, 5, 7, 29}
 $$
@@ -26,16 +26,25 @@ Hago PTF con $p$ genérico que no divide a ninguno de ese conjunto para ver que 
 \textit{Caso $p \notin\set{2, 3, 5, 7, 29}$}:\par
 $$
   \congruencia{15^{2p-2} + 7^{p+3} +3 \cdot 2 \cdot 29}{0}{p}
-  \Sii{PTF}
-  \congruencia{15^2 + 7^4 + 3 \cdot 2 \cdot 29}{0}{p}
+  \Sii{PTF}[\red{!!}]
+  \congruencia{15^0 + 7^4 + 174}{0}{p}
   \sii
-  \congruencia{2800}{0}{p}
+  \congruencia{2576}{0}{p}
   \sii
-  \congruencia{2^4 \cdot 5^3}{0}{p}
+  \congruencia{2^4 \cdot 7 \cdot 23}{0}{p}
 $$
 
-De acá saco que no hay $p$ fuera del conjunto que tengo que puedan ser solución.
-En el cálculo consideré que $p$ no era ni 2 ni 5. Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 29}$ en particular:
+Por si no lo agarraste, en \red{!!} usé:
+$$
+  \polyset{vars=p}
+  \divPol{2p - 2}{p-1}
+  \ytext
+  \polyset{vars=p}
+  \divPol{p + 3}{p-1}
+$$
+
+De acá saco que el 23 también puede ser solución.\par
+Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 23, 29}$ en particular:
 
 \begin{enumerate}[label={\tiny \magenta{\faIcon[regular]{gamepad}}}]
   \item
@@ -50,6 +59,17 @@ En el cálculo consideré que $p$ no era ni 2 ni 5. Arranco a analizar con cada 
           \congruencia{23}{0}{29}
         $$
         $p = 29$ \underline{no cumple}.
+
+  \item
+        \textit{Caso $p = 23$}:\par
+        $$
+          \congruencia{15^{44} + 7^{26} + 174 }{0}{23}
+          \Sii{PTF}
+          \congruencia{15^0 + 7^4 + 13}{0}{23}
+          \sii
+          \congruencia{0}{0}{23}
+        $$
+        $p = 23$ \fcolorbox{orange}{white}{cumple}.
 
   \item
         \textit{Caso $p = 7$}:\par
@@ -93,13 +113,13 @@ En el cálculo consideré que $p$ no era ni 2 ni 5. Arranco a analizar con cada 
         $p = 2$ \fcolorbox{orange}{white}{cumple}.
 \end{enumerate}
 
-Hay 3 números \textit{primos} que cumplen lo pedido.
+Hay 4 números \textit{primos} que cumplen lo pedido.
 
 \bigskip
 
 El resultado sería:
 $$
-  p \en \set{2, 5, 7}
+  p \en \set{2, 5, 7, 23}
 $$
 
 \begin{aportes}
