--- a/6-guia/ejercicios-6/ej-9-6.tex
+++ b/6-guia/ejercicios-6/ej-9-6.tex
@@ -16,9 +16,9 @@ $$
 $$
 
 \textit{De la ecuación de la parte imaginaria: }
-{\tiny(Es útil recordar que $z = \re(z) + i\im(z) \entonces \im(z) = \frac{z - \conj{z}}{2}$)}
+{\tiny(Es útil recordar que $z = \re(z) + i\im(z) \entonces \im(z) = \frac{z - \conj{z}}{2i}$)}
 $$
-  \im(3z^5) = 3 \cdot \frac{z^5 - \conj z^5}{2} = 0
+  \im(3z^5) = 3 \cdot \frac{z^5 - \conj z^5}{2i} = 0
   \sisolosi
   z^5 = \conj z^5
   \sisolosi
