fix extra 1 guia 7

--- a/7-guia/ejercicios-7-extra/ej-extra-1-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-1-7.tex
@@ -102,13 +102,14 @@
             X^2 - 2X -4 = (X - (1 + \sqrt{5}))(X - (1 - \sqrt{5}))
           \end{array}
         $$
-        {\tiny(debería comprobar que no son raíces de $g''$, pero no tengo ganas).}
+        {\tiny(para mostrar que son raíces dobles y no triples, por ejemplo, debería comprobar que $\alpha_{1,2}$ no son raíces de $g''=4(3X^2-6X-2)$, pero no tengo ganas,
+            \href{\dontWorryAboutAThing}{elijo creer que no lo son}).}
 
         Compruebo que sean también raíces de $g$:
         $$
           \divPol{X^4 - 4X^3 - 4X^2 + 16X + 16}{X^2 - 2X -4}
         $$
-        Dado que el resto dio 0 $alpha_{1,2}$ son raíces de $g$ y como son raíces de $g'$ entonces son raíces dobles de $g$, y de $f$.
+        Dado que el resto dio 0 $\alpha_{1,2}$ son raíces de $g$ y como son raíces de $g'$ entonces son raíces dobles de $g$, y de $f$.
 
         Notar que viendo el cociente de esa última división quizás podría haber visto el caso de factoreo a ojo, pero bueh, no pasó.
 
