fix enunciado 9 guia 7

--- a/7-guia/ejercicios-7-extra/ej-extra-9-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-9-7.tex
@@ -3,7 +3,7 @@
   \begin{itemize}
     \item $f$ comparte una raíz con $X^3 - 3X^2 + 7X -5$
     \item $X+3-\sqrt{2} \divideA f$,
-    \item $1-2 i$ es raíz de $f$ y $f'(X-2i) = 0$
+    \item $1-2 i$ es raíz de $f$ y $f'(1-2i) = 0$
   \end{itemize}
 \end{enunciado}
 
@@ -57,7 +57,7 @@ su conjugado complejo porque $f \en \racionales[X]$.
 Esa raíz es una de las que está en  $ g \llamada1$.\par
 
 El dato de $f'$, también nos indica que la multiplicidad de $1 - 2i$ como 
-raíz es por lo menos 2, ya que $f'(1 - 2i) = 0$, y porlo tanto $\mult(1 + 2i;f)$ también será por lo menos 2. \par\medskip
+raíz es por lo menos 2, ya que $f'(1 - 2i) = 0$, y por lo tanto $\mult(1 + 2i;f)$ también será por lo menos 2. \par\medskip
 
 Tenemos todo para armar a $f$:
 
