--- a/7-guia/ejercicios-7-extra/ej-extra-11-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-11-7.tex
@@ -42,6 +42,10 @@ Por lo tanto hay 2 valores posibles para $k$:
 $$
   k \en \set{-10, 10}
 $$
+
+Hay 2 valores de $k$ que formarán 2 polinomios distintos.
+Cada uno de esos polinomios tiene 3 raíces tanto de $f$ como de $f'$ por lo tanto las mencionadas raíces son raíces dobles.
+
 Tengo entonces que factorizar 2 polinomios $f$:
 $$
   \boxed{
@@ -59,7 +63,7 @@ Esto va a ser útil:
 
 \textit{Factorizo $f_{-10}$:}\par
 
-El valor $k = -10$ tiene las raíces con $q$ par:
+El valor $k = -10$ tiene asociadas las raíces con $q$ par:
 $$
   \set{\sqrt[3]{5}, \sqrt[3]{5} \cdot e^{i\frac{2}{3}\pi}, \sqrt[3]{5} \cdot e^{i\frac{4}{3}\pi} } =
   \set{\sqrt[3]{5}, \sqrt[3]{5} \cdot (- \frac{1}{2} + i\frac{\sqrt{3}}{2}), \sqrt[3]{5} \cdot (- \frac{1}{2} - i\frac{\sqrt{3}}{2}) }.
@@ -94,10 +98,10 @@ $$
 
 \textit{Factorizo $f_{10}$:}
 
-El valor $k = 10$ tiene las raíces con $q$ impar:
+El valor $k = 10$ tiene asociadas las raíces con $q$ impar:
 $$
-  \set{\sqrt[3]{5}, \sqrt[3]{5} \cdot e^{i\frac{1}{3}\pi}, \sqrt[3]{5} \cdot e^{i\frac{5}{3}\pi} } =
-  \set{\sqrt[3]{5}, \sqrt[3]{5} \cdot ( \frac{1}{2} + i\frac{\sqrt{3}}{2}), \sqrt[3]{5} \cdot ( \frac{1}{2} - i\frac{\sqrt{3}}{2}) }.
+  \set{-\sqrt[3]{5}, \sqrt[3]{5} \cdot e^{i\frac{1}{3}\pi}, \sqrt[3]{5} \cdot e^{i\frac{5}{3}\pi} } =
+  \set{-\sqrt[3]{5}, \sqrt[3]{5} \cdot ( \frac{1}{2} + i\frac{\sqrt{3}}{2}), \sqrt[3]{5} \cdot ( \frac{1}{2} - i\frac{\sqrt{3}}{2}) }.
 $$
 Esto es igual de horrible, pero solo hay que cambiar un par de signos a lo de antes:
 $$
@@ -105,15 +109,15 @@ $$
   \cdot
   \bigg(X - \sqrt[3]{5} \cdot \Big( \frac{1}{2} - i\frac{\sqrt{3}}{2}\Big)\bigg)
   =
-  \blue{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2}
+  \green{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2}
 $$
 \fcolorbox{orange}{white}{
   $
     \begin{array}{rcl}
-      f_{10} & =               & X^6 + 10X^3 + 25                                                                            \\
-             & \igual{\red{!}} & (X^3 + 5)^2  \en \racionales[X]                                                             \\
-             & \igual{\red{!}} & \Big((X + \sqrt[3]{5}) \cdot (\blue{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 =
-      \Big(X + \sqrt[3]{5}\Big)^2 \cdot \Big(\blue{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 \en \reales[X]      \\
+      f_{10} & =               & X^6 + 10X^3 + 25                                                                             \\
+             & \igual{\red{!}} & (X^3 + 5)^2  \en \racionales[X]                                                              \\
+             & \igual{\red{!}} & \Big((X + \sqrt[3]{5}) \cdot (\green{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 =
+      \Big(X + \sqrt[3]{5}\Big)^2 \cdot \Big(\green{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 \en \reales[X]      \\
              & \igual{\red{!}} &
       \Big(X + \sqrt[3]{5}\Big)^2 \cdot
       \Big(X - \sqrt[3]{5}  \big( \frac{1}{2} - i\frac{\sqrt{3}}{2}\big)\Big)^2 \cdot
